# timelapse

./: .env  .flake8  .gitignore  database.sqLite3  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  video.py  videothread.py
api/: Dockerfile  __main__.py  app.py  database.py  links.txt  requirements.txt  settings.py  tablehelper.py  tables.py
api/app/: __main__.py  app.py  tablehelper.py
api/app/controllers/: cameras.py  live_views.py  timelapse.py
api/app/models/: cameras.py  time_lapse.py
api/app/services/: CameraService.py  TimeLapseService.py
api/controllers/: Camera.py  LiveViews.py  TimeLapse.py  __init__.py  cameras.py  live_views.py  timelapse.py
api/core/: tasks.py
api/db/: tasks.py
api/models/: BaseModel.py  LiveViews.py  cameras.py  live_views.py  time_lapse.py
api/services/: CameraService.py  LiveViewsService.py  TimeLapseService.py
liveviews/: Dockerfile  __main__.py  database.py  runner.py  scheduler.py  settings.py  tables.py
liveviews/models/: Video.py
liveviews/services/: CameraService.py  DirectoryService.py  LiveViewsService.py  MetadataService.py
timelapse/: Dockerfile  __main__.py  database.py  settings.py
timelapse/services/: CameraService.py  DirectoryService.py  MetadataService.py  TimeLapseService.py
video/videosamples/camera10/: timelapse_day.txt
