[tool.poetry]
name = "python_video_timelapse"
version = "0.1.0"
description = ""
authors = ["shadowmorex"]
packages = [
    { include = "video"},
    { include = "liveviews"},
    ]
[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"
flake8 = "^3.9.2"
ffmpeg = "^1.4"
opencv-python = "^4.5.2"
pafy = "^0.5.5"
youtube_dl = "^2021.6.6"
pip = "^21.1.3"
psycopg2-binary = "^2.9.1"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
youtube-dl = "^2021.6.6"
sqlalchemy = "^1.4.20"
pydantic = "^1.8.2"
python-dotenv = "^0.18.0"
sqlalchemy-utils = "^0.37.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
video = "video.app:root"
liveviews = "liveviews.run:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
